src/components/Skills/Skills.module.css
.skills__header {
    margin-bottom: 3.5rem;
    margin-top: var(--margin-24px);
    text-align: center;
}
.h3__mobile {
    display: none;
}

.skills__container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 80%;
}

.skills__item {
    display: flex;
    flex-direction: column-reverse;
    margin: var(--margin-24px);
    width: 250px;
    max-width: 15%;
    text-align: center;
    border-radius: var(--default-radius);
    transition: all 0.3s ease-out;
}
.skills__item:hover {
    scale: 1.05;
    box-shadow: 0 1px 6px rgb(32 33 36 / 58%);
}

.skills__item img {
    max-height: 150px;
    object-fit: fill;
    padding: 2rem;
}

@media (max-width: 768px) {
    .skills__container {
        width: 100%;
    }
}

@media (max-width: 460px) {
    .skills__item img {
        padding: 1.1rem;
    }

    .h3__mobile {
        display: inline;
    }
    .h3__large {
        display: none;
    }
}

